--- a/TVShowAnalysisBI_LAB_PROJECT.ipynb
+++ b/TVShowAnalysisBI_LAB_PROJECT.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -12,10 +12,14 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'google'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\isaks\\Desktop\\hggfd\\TV-SHOWS-ANALYSIS\\TVShowAnalysisBI_LAB_PROJECT.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/isaks/Desktop/hggfd/TV-SHOWS-ANALYSIS/TVShowAnalysisBI_LAB_PROJECT.ipynb#ch0000000?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgoogle\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcolab\u001b[39;00m \u001b[39mimport\u001b[39;00m drive\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/isaks/Desktop/hggfd/TV-SHOWS-ANALYSIS/TVShowAnalysisBI_LAB_PROJECT.ipynb#ch0000000?line=1'>2</a>\u001b[0m drive\u001b[39m.\u001b[39mmount(\u001b[39m'\u001b[39m\u001b[39m/content/drive\u001b[39m\u001b[39m'\u001b[39m)\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
           ]
         }
       ],
@@ -4295,6 +4299,31 @@
         "\n",
         "print(ratings[ratings[\"label\"]==3][\"Title\"].values)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Scatterplot of the input data\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.figure(figsize=(10,6))\n",
+        "\n",
+        "sns.scatterplot(x = 'IMDb',y = 'Rotten Tomatoes',  data = X  ,s = 60 )\n",
+        "\n",
+        "plt.xlabel('IMDb rating (multiplied by 10)')\n",
+        "\n",
+        "plt.ylabel('Rotten Tomatoes')\n",
+        "\n",
+        "plt.title('IMDb rating (multiplied by 10) vs Rotten Tomatoes Score')\n",
+        "\n",
+        "plt.show()\n",
+        "\n",
+        " "
+      ]
     }
   ],
   "metadata": {
@@ -4304,8 +4333,26 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.1 64-bit",
+      "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.1"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2cb35337f43336524f1aa6256c6e3c8a2535349f8b2a360c6fa265a21e91ba9c"
+      }
     }
   },
   "nbformat": 4,
