Sakshi- Elbow plot

--- a/TVShowAnalysisBI_LAB_PROJECT.ipynb
+++ b/TVShowAnalysisBI_LAB_PROJECT.ipynb
@@ -1822,6 +1822,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#The elbow curve\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.figure(figsize=(12,6))\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.plot(range(1,11),wcss)\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.plot(range(1,11),wcss, linewidth=2, color=\"red\", marker =\"8\")\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.xlabel(\"K Value\")\n",
+        "\n",
+        "plt.xticks(np.arange(1,11,1))\n",
+        "\n",
+        "plt.ylabel(\"WCSS\")\n",
+        "\n",
+        " \n",
+        "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 50,
       "metadata": {
         "colab": {
