The elbow curve changes updated

--- a/TVShowAnalysisBI_LAB_PROJECT.ipynb
+++ b/TVShowAnalysisBI_LAB_PROJECT.ipynb
@@ -4357,6 +4357,27 @@
         "\n",
         " "
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#The elbow curve\n",
+        "\n",
+        "plt.figure(figsize=(12,6))\n",
+        "\n",
+        "plt.plot(range(1,11),wcss)\n",
+        "\n",
+        "plt.plot(range(1,11),wcss, linewidth=2, color=\"red\", marker =\"8\")\n",
+        "\n",
+        "plt.xlabel(\"K Value\")\n",
+        "plt.xticks(np.arange(1,11,1))\n",
+        "plt.ylabel(\"WCSS\")\n",
+        "\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
