Scatterplot of the 'clusters' updated

--- a/TVShowAnalysisBI_LAB_PROJECT.ipynb
+++ b/TVShowAnalysisBI_LAB_PROJECT.ipynb
@@ -4147,6 +4147,24 @@
         "\n",
         "print(ratings[ratings[\"label\"]==3][\"Title\"].values)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Scatterplot of the clusters\n",
+        "\n",
+        "plt.figure(figsize=(10,6))\n",
+        "sns.scatterplot(x = 'IMDb',y = 'Rotten Tomatoes',hue=\"label\",  \n",
+        "                 palette=['green','orange','red',\"blue\"], legend='full',data = ratings  ,s = 60 )\n",
+        "\n",
+        "plt.xlabel('IMDb rating(Multiplied by 10)')\n",
+        "plt.ylabel('Rotten Tomatoes score') \n",
+        "plt.title('IMDb rating(Multiplied by 10) vs Rotten Tomatoes score')\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
