Scatterplot of the input data

--- a/TVShowAnalysisBI_LAB_PROJECT.ipynb
+++ b/TVShowAnalysisBI_LAB_PROJECT.ipynb
@@ -4147,6 +4147,22 @@
         "\n",
         "print(ratings[ratings[\"label\"]==3][\"Title\"].values)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Scatterplot of the input data \n",
+        "\n",
+        "plt.figure(figsize=(10,6))\n",
+        "sns.scatterplot(x = 'IMDb',y = 'Rotten Tomatoes',  data = X  ,s = 60 )\n",
+        "plt.xlabel('IMDb rating (multiplied by 10)')\n",
+        "plt.ylabel('Rotten Tomatoes') \n",
+        "plt.title('IMDb rating (multiplied by 10) vs Rotten Tomatoes Score')\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
